# hr-resource-chatbot

./: README.md  app.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/routes/: chat.py  employees.py
app/core/: state.py
app/data/: employees.json
app/schemas/: models.py
app/services/: data_processing.py  embeddings.py  llm_generation.py  vector_store.py
frontend/: README.md  index.html
frontend/src/: App.tsx
frontend/src/components/: About.tsx  ChatInterface.tsx  EmployeeResults.tsx  EmployeeSearch.tsx  LoadingSpinner.tsx  MessageBubble.tsx  Navigation.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
